--- a/PyCitySchools_Challenge_starter_code.ipynb
+++ b/PyCitySchools_Challenge_starter_code.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sd0066\\AppData\\Local\\Temp/ipykernel_32268/3904321406.py:18: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\sd0066\\AppData\\Local\\Temp/ipykernel_175908/3397188771.py:18: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  student_data_df[\"student_name\"] = student_data_df[\"student_name\"].str.replace(word,\"\")\n"
      ]
     },
@@ -174,7 +174,7 @@
        "9          84  "
       ]
      },
-     "execution_count": 278,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "14         14     Thomas High School   Charter  1635  1043130"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -433,7 +433,7 @@
        "Name: reading_score, Length: 461, dtype: int64"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
        "Name: math_score, Length: 461, dtype: int64"
       ]
      },
-     "execution_count": 283,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
        "[461 rows x 7 columns]"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
        "4        84.0          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 286,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1011,9 +1011,9 @@
        "      <td>$24,649,428.00</td>\n",
        "      <td>78.9</td>\n",
        "      <td>81.9</td>\n",
-       "      <td>75</td>\n",
-       "      <td>86</td>\n",
-       "      <td>65</td>\n",
+       "      <td>74.8</td>\n",
+       "      <td>85.7</td>\n",
+       "      <td>64.9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1024,10 +1024,10 @@
        "0             15         38,709  $24,649,428.00               78.9   \n",
        "\n",
        "  Average Reading Score % Passing Math % Passing Reading % Overall Passing  \n",
-       "0                  81.9             75                86                65  "
+       "0                  81.9           74.8              85.7              64.9  "
       ]
      },
-     "execution_count": 293,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,9 +1053,9 @@
     "# Format the columns.\n",
     "district_summary_df[\"Average Math Score\"] = district_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
     "district_summary_df[\"Average Reading Score\"] = district_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
-    "district_summary_df[\"% Passing Math\"] = district_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
-    "district_summary_df[\"% Passing Reading\"] = district_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
-    "district_summary_df[\"% Overall Passing\"] = district_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "district_summary_df[\"% Passing Math\"] = district_summary_df[\"% Passing Math\"].map(\"{:.1f}\".format)\n",
+    "district_summary_df[\"% Passing Reading\"] = district_summary_df[\"% Passing Reading\"].map(\"{:.1f}\".format)\n",
+    "district_summary_df[\"% Overall Passing\"] = district_summary_df[\"% Overall Passing\"].map(\"{:.1f}\".format)\n",
     "\n",
     "# Display the data frame\n",
     "district_summary_df"
@@ -1442,194 +1442,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Student ID</th>\n",
-       "      <th>student_name</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>grade</th>\n",
-       "      <th>school_name</th>\n",
-       "      <th>reading_score</th>\n",
-       "      <th>math_score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>37535</th>\n",
-       "      <td>37535</td>\n",
-       "      <td>Norma Mata</td>\n",
-       "      <td>F</td>\n",
-       "      <td>10th</td>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>76.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37536</th>\n",
-       "      <td>37536</td>\n",
-       "      <td>Cody Miller</td>\n",
-       "      <td>M</td>\n",
-       "      <td>11th</td>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>84.0</td>\n",
-       "      <td>82.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37541</th>\n",
-       "      <td>37541</td>\n",
-       "      <td>Eric Stevens</td>\n",
-       "      <td>M</td>\n",
-       "      <td>10th</td>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>76.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37542</th>\n",
-       "      <td>37542</td>\n",
-       "      <td>Elizabeth Bennett</td>\n",
-       "      <td>F</td>\n",
-       "      <td>11th</td>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>91.0</td>\n",
-       "      <td>94.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37544</th>\n",
-       "      <td>37544</td>\n",
-       "      <td>Jacqueline Harris</td>\n",
-       "      <td>F</td>\n",
-       "      <td>10th</td>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>92.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39163</th>\n",
-       "      <td>39163</td>\n",
-       "      <td>John Reese</td>\n",
-       "      <td>M</td>\n",
-       "      <td>11th</td>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>75.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39165</th>\n",
-       "      <td>39165</td>\n",
-       "      <td>Donna Howard</td>\n",
-       "      <td>F</td>\n",
-       "      <td>12th</td>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>90.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39166</th>\n",
-       "      <td>39166</td>\n",
-       "      <td>Dawn Bell</td>\n",
-       "      <td>F</td>\n",
-       "      <td>10th</td>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>70.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39168</th>\n",
-       "      <td>39168</td>\n",
-       "      <td>Desiree Kidd</td>\n",
-       "      <td>F</td>\n",
-       "      <td>10th</td>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>90.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39169</th>\n",
-       "      <td>39169</td>\n",
-       "      <td>Carolyn Jackson</td>\n",
-       "      <td>F</td>\n",
-       "      <td>11th</td>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>75.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1174 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Student ID       student_name gender grade         school_name  \\\n",
-       "37535       37535         Norma Mata      F  10th  Thomas High School   \n",
-       "37536       37536        Cody Miller      M  11th  Thomas High School   \n",
-       "37541       37541       Eric Stevens      M  10th  Thomas High School   \n",
-       "37542       37542  Elizabeth Bennett      F  11th  Thomas High School   \n",
-       "37544       37544  Jacqueline Harris      F  10th  Thomas High School   \n",
-       "...           ...                ...    ...   ...                 ...   \n",
-       "39163       39163         John Reese      M  11th  Thomas High School   \n",
-       "39165       39165       Donna Howard      F  12th  Thomas High School   \n",
-       "39166       39166          Dawn Bell      F  10th  Thomas High School   \n",
-       "39168       39168       Desiree Kidd      F  10th  Thomas High School   \n",
-       "39169       39169    Carolyn Jackson      F  11th  Thomas High School   \n",
-       "\n",
-       "       reading_score  math_score  \n",
-       "37535           76.0        76.0  \n",
-       "37536           84.0        82.0  \n",
-       "37541           80.0        76.0  \n",
-       "37542           91.0        94.0  \n",
-       "37544           71.0        92.0  \n",
-       "...              ...         ...  \n",
-       "39163           90.0        75.0  \n",
-       "39165           99.0        90.0  \n",
-       "39166           95.0        70.0  \n",
-       "39168           99.0        90.0  \n",
-       "39169           95.0        75.0  \n",
-       "\n",
-       "[1174 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 297,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1174\n"
+     ]
     }
    ],
    "source": [
     "# Step 5.  Get the number of 10th-12th graders from Thomas High School (THS).\n",
     "upperclassman_df = student_data_df.loc[(student_data_df.grade != '9th') & (student_data_df.school_name == 'Thomas High School')]\n",
-    "upperclassman_df"
+    "upperclassman_count = upperclassman_df[\"Student ID\"].count()\n",
+    "print(upperclassman_count)"
    ]
   },
   {
