--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ac85379a",
+   "id": "b57bee57",
    "metadata": {},
-   "source": []
+   "source": [
+    "## School District Analysis "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "9c18b012",
+   "id": "45ba2e88",
    "metadata": {},
    "outputs": [
     {
@@ -8963,7 +8965,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "413a91eb",
+   "id": "e204c518",
    "metadata": {},
    "outputs": [
     {
